--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,8 @@ body {
   width: 75%;
   margin: 0 auto;
   border-radius: 10px;
-  background-color: #dfb2c4;
+  background-color: #e2c8d3;
   border: 2px solid black;
-
 }
 
 h2 {
@@ -18,19 +17,30 @@ h2 {
   margin-top: 50px;
 }
 
+#intro {
+  background-color: lightblue;
+  padding: 10px 30px 15px 30px;
+  margin-top: 30px;
+  border-radius: 6px;
+  border: 1px solid black;
+}
+
 label {
   font-size: 18px;
 }
 
 #quiz {
+  margin: 25px 40px 0 20px;
+}
+
+.floater {
   float: left;
-  margin-top: 30px;
-  margin-right: 40px;
 }
 
 #output {
   clear: right;
-  margin-top: -30px;
+  margin-top: -20px;
+  margin-right: 15px;
 }
 
 .hider {
@@ -45,4 +55,13 @@ label {
   background-color: lightgoldenrodyellow;
   border: 1px solid black;
   margin-top: 15px;
+  font-size: 18px;
+}
+
+img {
+  margin-left: 75px;
+}
+
+p {
+  text-align: center;
 }
