--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,36 @@
 body {
-  background-color: #c79dae;
+  background-color: #2F2C2C;
+  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
 .jumbotron {
-  text-align: center;
-  width: 75%;
   margin: 0 auto;
   border-radius: 10px;
-  background-color: #e2c8d3;
-  border: 2px solid black;
-  padding: 3rem 2rem;
+  background-color: #2F2C2C;
+  padding: 3rem 0.75rem;
+
+}
+
+.jumbotron p {
+  margin: 25px auto;
+  font-size: 27px;
+}
+
+hr {
+  background-color: white;
+  margin: -25px 33px 0 33px;;
 }
 
 h2 {
-  text-align: justify;
-  margin-top: 50px;
-}
-
-#intro {
-  background-color: lightblue;
-  padding: 10px 30px 15px 30px;
-  margin-top: 30px;
-  border-radius: 6px;
-  border: 1px solid black;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 20px;
 }
 
 label {
   font-size: 18px;
+  padding: 10px 0;
 }
 
 #quiz {
@@ -48,22 +52,29 @@ label {
 }
 
 #language-result {
-  font-size: 30px;
+  font-size: 50px;
+  text-align: center;
 }
 
 .btn {
-  background-color: lightgoldenrodyellow;
-  border: 1px solid black;
+  border: 4px solid #D5FF7C;
   margin-top: 15px;
   font-size: 18px;
+  padding: 8px 15px;
+  color: white
+}
+
+.btn:hover {
+  color: #D5FF7C;
+}
+
+#resetter {
+  margin-left: 10px;
 }
 
 img {
-  margin-left: 75px;
-}
-
-p {
-  text-align: center;
+  display: block;
+  margin: 15px auto;
 }
 
 .pg-btm {
