--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,16 @@ body {
 
 .jumbotron {
   margin: 0 auto;
-  border-radius: 10px;
   background-color: #2F2C2C;
   padding: 3rem 0.75rem;
-
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 700;
 }
 
 .jumbotron p {
   margin: 25px auto;
   font-size: 27px;
+  font-family: 'Alegreya Sans', sans-serif;
 }
 
 hr {
@@ -56,6 +57,15 @@ label {
   text-align: center;
 }
 
+#takeout {
+  text-align: center;
+}
+
+#takeout p {
+  margin-top: 40px;
+  font-size: 18px;
+}
+
 .btn {
   border: 4px solid #D5FF7C;
   margin-top: 15px;
@@ -74,9 +84,9 @@ label {
 
 img {
   display: block;
-  margin: 15px auto;
+  margin: 25px auto;
 }
 
 .pg-btm {
-  padding-bottom: 100px;
+  margin-bottom: 200px;
 }
