--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ label {
 }
 
 #quiz {
-  margin: 25px 40px 0 30px;
+  margin: 25px 40px 50px 30px;
 }
 
 .floater {
@@ -85,8 +85,4 @@ label {
 img {
   display: block;
   margin: 25px auto;
-}
-
-.pg-btm {
-  margin-bottom: 200px;
 }
